source/assets/css/main.scss
/* ... */
@media screen and (min-width: 768px) {
  .nav-top {
    position: relative;
    
    .nav-container {
      padding-top: 20px;
      min-height: 80px;
    }
  }

  .logo-name {
    display: inline-block;
    float: left;
    padding: .8rem;
  }

  .nav-mobile-button {
    display: none;
  }

  .nav-main {
    display: inline-block;
    float: right;
    clear: none;
    margin-left: 0;
    margin-right: 0;
    max-height: none;
    display: inline-block;
    vertical-align: middle;

    ul {
      border: 0;
      display: inline-block;
      
      li {
        margin: 0 0.25em;
        border: 0;
        display: inline-block; /* not sure */
      }
    }  
  }

  .js {
    .nav-main {
      max-height: none;
      display: inline-block;
      vertical-align: middle;
    }
  }
}

/* HOME PAGE HEADER */

.intro {
  width: 100%;
  padding: 80px 30px 74px 30px;
  color: #39586F;
  background: #7ABCEE;
  text-align: center;
  display: block;
  position: relative;
  font-size: 1rem;
  line-height: 1.4;
}
.intro-container {
  max-width: 1100px;
  margin-left: auto;
  margin-right: auto;

  h1 {
    font-weight: 600;
    text-transform: uppercase;
    margin-bottom: .7em;
    font-size: 1.4em;
  }
}
.intro-list {
  display: none;
  font-size: 1.125em;
}
.intro-scroll {
  display: inline-block;
  padding-top: 1.25em;
  margin-top: 1.25em;
  text-transform: uppercase;
  font-size: 1em;
  font-weight: 900;
  letter-spacing: 1px;
  color: $nav-text;
  @include transition;
  &:hover {
    color: $darkest-blue;
  }

  .fa {
    display: block;
    font-size: .875em;
  }
}
.first-word {
  display: table;
  margin: auto;
  font-size: 2em;
  font-family: $secondary-font;
  font-weight: 300;
}

.underline {
  text-decoration: none;
  color: $nav-text;
  font-weight: 700;
  border-bottom: 1px dashed;
  padding-bottom: -5px;
}

@media only screen and (min-width: 480px) {
  .intro-container {
    h1 {
      font-size: 1.6em;
    }
  }
  
  .intro-list {
    display: block;
    margin-bottom: 1em;
    padding-left: 0;
    font-weight: 600;

    li {
      display: inline-block;
      margin-left: .2em;
      vertical-align: middle;
      &:before {
        font-family: 'FontAwesome';
        content: '\f111';
        font-size: 4px;
        vertical-align: middle;
        display: inline-block;
        margin-right: 1.5em;
      }
      &:first-child:before {
        content: none;
      }
    }
  }
}
@media only screen and (min-width: 768px) {
  .intro {
    padding: 180px 40px 174px 40px;
  }

  .intro-container {
    h1 {
      font-size: 1.8em;
    }
  }
}
@media only screen and (min-width: 1100px) {
  .intro-container {
    h1 {
      font-size: 2em;
    }
  }
}

/* FULL WIDTH BUTTON */

.button-fullwidth {
  cursor: pointer;
  background-color: $light-blue;
  font-size: 1.25em;
  font-weight: 700;
  text-transform: uppercase;
  text-align: center;
  width: 100%;
  color: $nav-text;
  @include transition;
  &:hover,
  &:focus,
  &:active {
    background-color: $darkest-blue;
  }

  a{
    width: 100%;
    margin-left: 0;
    margin-right: 0;
    padding-top: 1rem;
    padding-bottom: .8rem;
    display: block;
  }

  .fa {
    padding: 0 0.3em;
  }
}

/* HOME PAGE - PORTFOLIO */

.section-title {
  padding-bottom: 60px;
  text-align: center;
}

.portfolio-showcase {
  background: aliceblue;
  padding-top: 80px;
  max-width: 1200px;

  h3 {
    text-align: center;
    padding-top: 1.25em;
    padding-bottom: 1.25em;
    font-size: 1rem;
    font-weight: 400;
  }
  .portfolio-items {
    font-size: 0;
  }
  figure {
    display: inline-block;
    width: 100%;
    position: relative;
    padding-top: 0.5em;
    font-size: 1rem
  
  }
}
.portfolio-images {
  background: transparent;
  &:hover>img {
    opacity: 1;
    @include transition;
  }

  img {
    opacity: .5;
    z-index: 100;
    -webkit-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
    &.logo {
      position: absolute;
      top: .5em;
      left: 0;
      opacity: 1;
      width: 100%;
      background: transparent;
      @include transition;
      &:hover {
        opacity: 0.3;
      }
    }
  }
}
#rosewater {
  background-color: antiquewhite;
}
#curryscakeangels {
  background-color: #7ABCEE;
}
#carpentry {
  background-color: #F6D380;
}
#westcoastkitchen {
  background-color: darkseagreen;
}
#js-quote {
  background-color: rgb(138, 201, 175);
}
#exam-platform {
  background-color: coral;
}
#js-calculator {
  background-color: #8a7564;
}

@media only screen and (min-width: 580px) {
  .portfolio-showcase {
    figure {
      width: 50%;
    }
  }
}
@media only screen and (min-width: 768px) {
  .portfolio-showcase {
    h2 {
      font-size: 1.6em;
    }
  }
}

/* HOME PAGE - TESTIMONIALS */

.testimonials-showcase {
  padding-top: 80px;
  padding-bottom: 60px;
  max-width: 760px;

  .testimonial {
    text-align: left;
    padding: 0 20px 20px 20px;
    width: 100%;

    .quote {
      line-height: 1.5;
      font-size: 1.125rem;
      margin-bottom: 20px;
    }

    .source {
      text-align: right;
      font-weight: 700;

      a {
        color: $dark-blue;
        @include transition;
        &:hover {
          color: $middle-blue;
        }
      }
    }
  }
}
/* ... */

